This doesn't need to be CUDA anymore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(libfive-cuda LANGUAGES CXX CUDA)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --ptxas-options=-v -g -lineinfo")
 
-add_executable(libfive-cuda-test libfive-cuda.cu tape.cpp renderable.cu)
+add_executable(libfive-cuda-test libfive-cuda.cpp tape.cpp renderable.cu)
 target_include_directories(libfive-cuda-test PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
 target_include_directories(libfive-cuda-test PRIVATE libfive/libfive/include)
 target_link_libraries(libfive-cuda-test ${CMAKE_SOURCE_DIR}/libfive/build/libfive/src/libfive.dylib)
