--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,11 @@ cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
 
 project(libfive-cuda LANGUAGES CXX CUDA)
 
+add_subdirectory(libfive)
+
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -src-in-ptx -keep --ptxas-options=-v -g -lineinfo")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -g -fPIC -pedantic -Werror=switch -march=native")
-
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(EIGEN REQUIRED eigen3>=3.2.92)
 
 add_executable(libfive-cuda-test
     libfive-cuda.cpp
@@ -17,8 +16,7 @@ target_include_directories(libfive-cuda-test PRIVATE
     ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}
     libfive/libfive/include
     ${EIGEN_INCLUDE_DIRS})
-target_link_libraries(libfive-cuda-test
-    ${CMAKE_SOURCE_DIR}/libfive/build/libfive/src/libfive.dylib)
+target_link_libraries(libfive-cuda-test five)
 set_target_properties(libfive-cuda-test PROPERTIES
     CUDA_STANDARD 11
     CUDA_SEPARABLE_COMPILATION ON)
