Add infrastructure for GUI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ set_target_properties(libfive-cuda-test PROPERTIES CXX_STANDARD 11)
 target_include_directories(libfive-cuda-test PUBLIC lib)
 target_link_libraries(libfive-cuda-test five-cuda)
 
+add_subdirectory(gui)
+
 if(APPLE)
   # Add the rpath to the lib
   set_property(TARGET libfive-cuda-test PROPERTY BUILD_RPATH ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES})
