Add text editor

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -5,10 +5,13 @@ add_executable(demo MACOSX_BUNDLE
     imgui/imgui_draw.cpp
     imgui/imgui_impl_glfw.cpp
     imgui/imgui_impl_opengl3.cpp
-    imgui/imgui_widgets.cpp)
+    imgui/imgui_widgets.cpp
+    imgui-color-text-edit/TextEditor.cpp)
 
 set_target_properties(demo PROPERTIES CXX_STANDARD 11)
-target_include_directories(demo PRIVATE imgui)
+target_include_directories(demo PRIVATE
+    imgui
+    imgui-color-text-edit)
 target_link_libraries(demo glfw)
 target_link_libraries(demo glew)
 
