--- a/gui/Info.plist
+++ b/gui/Info.plist
@@ -1,22 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>NSPrincipalClass</key>
-    <string>NSApplication</string>
     <key>NSHighResolutionCapable</key>
     <string>True</string>
-    <key>CFBundleIconFile</key>
-    <string>studio.icns</string>
     <key>CFBundlePackageType</key>
     <string>APPL</string>
     <key>CFBundleGetInfoString</key>
-    <string>Scheme-based GUI for the libfive CAD kernel</string>
+    <string></string>
     <key>CFBundleExecutable</key>
     <string>demo</string>
     <key>CFBundleIdentifier</key>
-    <string>com.impraxical.libfive-cuda-demo</string>
+    <string></string>
+    <key>CFBundleDevelopmentRegion</key>
+    <string>English</string>
     <key>CFBundleVersion</key>
-    <string>0.0.0</string>
+    <string></string>
+    <key>CFBundleIconFile</key>
+    <string></string>
+    <key>CFBundleInfoDictionaryVersion</key>
+    <string>6.0</string>
+    <key>CFBundleLongVersionString</key>
+    <string></string>
+    <key>CFBundleName</key>
+    <string></string>
+    <key>CFBundleShortVersionString</key>
+    <string></string>
+    <key>CFBundleSignature</key>
+    <string>????</string>
+    <key>CSResourcesFileMapped</key>
+    <true/>
+    <key>NSHumanReadableCopyright</key>
+    <string></string>
 </dict>
 </plist>
