Fix linking libraries on Ubuntu

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -14,11 +14,15 @@ target_include_directories(demo PRIVATE
     common/inc
     imgui
     imgui-color-text-edit)
-target_link_libraries(demo glfw glew five-guile five-cuda)
+target_link_libraries(demo glfw five-guile five-cuda)
 
 if (APPLE)
+    target_link_libraries(demo glew)
+
     # Hack because target_link_libraries injects -frameworks OpenGL into the CUDA
     # linker call, which fails because nvcc doesn't know about that argument
     set_property(TARGET demo APPEND_STRING PROPERTY LINK_FLAGS " -framework OpenGL")
     set_property(TARGET demo PROPERTY BUILD_RPATH ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES})
+else() # Ubuntu, presumably
+    target_link_libraries(demo GLEW GL)
 endif()
