Working on a benchmark of tape size

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,16 +1,17 @@
-macro(benchmark)
-    add_executable(${ARGV0} ${ARGV0}.cpp)
+function(benchmark)
+    add_executable(${ARGV0} ${ARGV0}.cpp ${ARGV1})
     set_target_properties(${ARGV0} PROPERTIES CXX_STANDARD 11)
     target_include_directories(${ARGV0} PUBLIC ../lib)
-    target_link_libraries(${ARGV0} five-cuda)
+    target_link_libraries(${ARGV0} five-cuda five-guile)
 
     if(APPLE)
       # Add the rpath to the lib
       set_property(TARGET ${ARGV0} PROPERTY BUILD_RPATH ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES})
     endif()
-endmacro()
+endfunction()
 
 benchmark(render_2d)
 benchmark(render_3d)
 benchmark(circle)
 benchmark(donut)
+benchmark(tape_size ../gui/interpreter.cpp)
