Add lots of benchmarking tools

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -15,3 +15,5 @@ benchmark(render_3d)
 benchmark(circle)
 benchmark(donut)
 benchmark(tape_size ../gui/interpreter.cpp)
+benchmark(brute)
+benchmark(dump_tape)
