--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -14,6 +14,7 @@ benchmark(render_2d)
 benchmark(render_2d_table)
 benchmark(render_3d)
 benchmark(render_3d_multi)
+benchmark(render_3d_table)
 benchmark(circle)
 benchmark(donut)
 benchmark(tape_size ../gui/interpreter.cpp)
