Rename tape to renderable_tape, preparing to rename v3 tape to tape

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -src-in-ptx -keep --ptxas-options=-v -g -lineinfo")
 
 add_library(five-cuda
-    tape.cpp
+    renderable_tape.cpp
     renderable.cu
     gpu_opcode.cu
     v3.cu)
