Cleaned up v3 (tape + context) now works

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,9 @@ add_library(five-cuda
     renderable_tape.cpp
     renderable.cu
     gpu_opcode.cu
+    tape.cpp
+    context.cpp
+    context.cu
     v3.cu)
 target_include_directories(five-cuda PUBLIC
     ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}
