Update brute test and tape dumper

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,28 +1,29 @@
 function(benchmark)
     set(files "")
-    foreach(f ${ARGN})
-        list(APPEND files "${f}.cpp")
-    endforeach(f)
-    add_executable(${ARGV0} ${files})
-    set_target_properties(${ARGV0} PROPERTIES CXX_STANDARD 11)
-    target_include_directories(${ARGV0} PUBLIC ../lib)
-    target_link_libraries(${ARGV0} five-cuda)
+    get_filename_component(TARGET ${ARGV0} NAME_WE)
+    add_executable(${TARGET} ${ARGN})
+    set_target_properties(${TARGET} PROPERTIES
+        CUDA_STANDARD 11
+        CXX_STANDARD 11
+        CUDA_SEPARABLE_COMPILATION ON)
+    target_include_directories(${TARGET} PUBLIC ../lib)
+    target_link_libraries(${TARGET} five-cuda)
 
     if(APPLE)
       # Add the rpath to the lib
-      set_property(TARGET ${ARGV0} PROPERTY BUILD_RPATH ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES})
+      set_property(TARGET ${TARGET} PROPERTY BUILD_RPATH ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES})
     endif()
 endfunction()
 
-benchmark(render_2d_table stats)
-benchmark(render_3d_table stats)
-benchmark(brute stats)
+benchmark(render_2d_table.cpp stats.cpp)
+benchmark(render_3d_table.cpp stats.cpp)
+benchmark(brute.cu stats.cpp)
 
-benchmark(render_2d)
-benchmark(render_3d)
-benchmark(circle)
-benchmark(donut)
-benchmark(dump_tape)
-benchmark(tape_shortening)
-benchmark(ssao)
-benchmark(tape_building_time)
+benchmark(render_2d.cpp)
+benchmark(render_3d.cpp)
+benchmark(circle.cpp)
+benchmark(donut.cpp)
+benchmark(dump_tape.cpp)
+benchmark(tape_shortening.cpp)
+benchmark(ssao.cpp)
+benchmark(tape_building_time.cpp)
