Add a CMake flag for running on a big server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,15 @@ add_subdirectory(libfive)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wall -Wextra -g -fPIC -pedantic -Werror=switch -march=native")
 
+option(BIG_SERVER "Running on large server" OFF)
+if (${BIG_SERVER})
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBIG_SERVER")
+    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -DBIG_SERVER")
+endif()
+
 add_subdirectory(src)
-add_subdirectory(gui)
 add_subdirectory(benchmark)
+
+if (NOT(${BIG_SERVER}))
+    add_subdirectory(gui)
+endif()
