Rename everything (libfive-cuda -> mpr)
While in development, I called this `libfive-cuda`, but I may end up
using that name for whatever this evolves into.  Giving it a less
`libfive`-associated name lets me pin this as the paper's reference
implementation, and decouples it from the main `libfive` project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
 
-project(libfive-cuda LANGUAGES C CXX CUDA)
+project(mpr LANGUAGES C CXX CUDA)
 
 # Configure everyone to use packed opcodes, which is optional
 set(LIBFIVE_PACKED_OPCODES ON)
