--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,6 @@ endif()
 add_subdirectory(src)
 add_subdirectory(benchmark)
 
-if (NOT(${BIG_SERVER}))
-    add_subdirectory(gui)
-endif()
+#if (NOT(${BIG_SERVER}))
+#    add_subdirectory(gui)
+#endif()
