--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -3,8 +3,8 @@ function(benchmark)
     get_filename_component(TARGET ${ARGV0} NAME_WE)
     add_executable(${TARGET} ${ARGN})
     set_target_properties(${TARGET} PROPERTIES
-        CUDA_STANDARD 11
-        CXX_STANDARD 11
+        CUDA_STANDARD 17
+        CXX_STANDARD 17
         CUDA_SEPARABLE_COMPILATION ON)
     target_include_directories(${TARGET} PUBLIC ../lib)
     target_link_libraries(${TARGET} mpr)
@@ -17,7 +17,7 @@ endfunction()
 
 benchmark(render_2d_table.cpp stats.cpp)
 benchmark(render_3d_table.cpp stats.cpp)
-benchmark(brute.cu stats.cpp)
+#benchmark(brute.cu stats.cpp)
 
 benchmark(render_2d.cpp)
 benchmark(render_3d.cpp)
@@ -27,6 +27,6 @@ benchmark(render_effects.cpp)
 
 benchmark(circle.cpp)
 benchmark(print_tape_table.cpp)
-benchmark(dump_tape.cpp)
+#benchmark(dump_tape.cpp)
 benchmark(tape_shortening.cpp)
 benchmark(tape_building_time.cpp)
